{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 75,
  "lineage": "d5b1185e-910e-724d-fb83-4f89734e506a",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591924294836:security-group/sg-0d80df94d8eb93538",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d80df94d8eb93538",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250418172323819000000001",
            "name_prefix": "terraform-",
            "owner_id": "591924294836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg18"
            },
            "tags_all": {
              "Name": "sg18"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b38ffbf54191f036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc18"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591924294836:internet-gateway/igw-0f9a9ccc78f4e1e26",
            "id": "igw-0f9a9ccc78f4e1e26",
            "owner_id": "591924294836",
            "tags": {
              "Name": "igw18"
            },
            "tags_all": {
              "Name": "igw18"
            },
            "vpc_id": "vpc-0b38ffbf54191f036"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc18"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591924294836:route-table/rtb-00e052b4846297dfe",
            "id": "rtb-00e052b4846297dfe",
            "owner_id": "591924294836",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9a9ccc78f4e1e26",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b38ffbf54191f036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw18",
            "module.vpc.aws_vpc.vpc18"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a5e1a0d86215d7",
            "route_table_id": "rtb-00e052b4846297dfe",
            "subnet_id": "subnet-0b576bab0d74ad388"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw18",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.sn1",
            "module.vpc.aws_vpc.vpc18",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0018022b05a4c076c",
            "route_table_id": "rtb-00e052b4846297dfe",
            "subnet_id": "subnet-09357f5f53e068396"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw18",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.sn2",
            "module.vpc.aws_vpc.vpc18",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591924294836:subnet/subnet-0b576bab0d74ad388",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b576bab0d74ad388",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "591924294836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn1"
            },
            "tags_all": {
              "Name": "sn1"
            },
            "vpc_id": "vpc-0b38ffbf54191f036"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc18",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591924294836:subnet/subnet-09357f5f53e068396",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09357f5f53e068396",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "591924294836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn1"
            },
            "tags_all": {
              "Name": "sn1"
            },
            "vpc_id": "vpc-0b38ffbf54191f036"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc18",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591924294836:vpc/vpc-0b38ffbf54191f036",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-017cacc8ec9d925ba",
            "default_route_table_id": "rtb-02ff1fa076200d6a0",
            "default_security_group_id": "sg-026f86897032dfb60",
            "dhcp_options_id": "dopt-0a4c053526d080d16",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b38ffbf54191f036",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ff1fa076200d6a0",
            "owner_id": "591924294836",
            "tags": {
              "Name": "vpc18"
            },
            "tags_all": {
              "Name": "vpc18"
            }
          }
        }
      ]
    }
  ]
}